--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,15 @@ html, body {
 
 
 
+a {
+    color: var(--color-theme);
+    text-decoration: none;
+    font-weight: var(--font-weight-regular);
+}
+    a:hover {
+        color: var(--color-theme-dark);
+    }
+
 
 
 .form-theme .card {
@@ -159,14 +168,6 @@ background-color: var(--color-gray-4);
         line-height: 2;
     }
 
-    .form-theme .card .card-body .card-text a {
-        color: var(--color-theme);
-        text-decoration: none;
-        font-weight: var(--font-weight-medium);
-    }
-        .form-theme .card .card-body .card-text a:hover {
-            color:blue;
-        }
 
     .form-theme .card .card-body .card-text.text-small {
     color: var(--color-gray-5);
@@ -309,6 +310,42 @@ margin: 0.4rem 0;
     .main-menu .search {
          flex: 4;
     }
+
+        .main-menu .search #searchboxForm {
+            border-radius: var(--border-radius-medium);
+            height: 45px;
+            margin: auto;
+            position: relative;
+        }
+
+            .main-menu .search #searchboxForm input {
+                position: absolute;
+                border-radius: var(--border-radius-medium);
+                height: 100%;
+                width: 100%;
+                outline: none;
+                border: 1px solid var(--color-gray-2);
+                font-size: 0.9rem;
+                padding-left: 1.3rem;
+            }
+
+            .main-menu .search #searchboxForm button {
+                position: absolute;
+                top: 0;
+                right: -2px;
+                width: 50px;
+                height: 100%;
+                background-color: var(--color-theme);
+                color: var(--color-white);
+                border: none;
+                border-radius: 0 var(--border-radius-medium) var(--border-radius-medium) 0;
+                transition: 0.3s ease-in-out;
+            }
+                .main-menu .search #searchboxForm button:hover {
+                    background-color: var(--color-theme-dark);
+                }
+
+
 
     .main-menu .menu-links {
          flex: 3;
@@ -1184,24 +1221,60 @@ margin: 0.4rem 0;
     position: relative;
     display: flex;
     justify-content: center;
+    z-index: 0;
 }
     .external-logins .label {
         background-color: var(--color-gray-4);
         padding: 0 1rem;
-        z-index: 1;
+        z-index: 2;
     }
 
         .external-logins .line {
             position: absolute;
-            border: 1px solid black;
+            border: 1px solid var(--color-gray-0);
             top: 10px;
             left: 0;
             right: 0;
-            z-index: 0;
+            z-index: -1;
+            opacity: 0.5;
         }
 
 
+.external-socialmedia-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;   
+}
 
+    .external-socialmedia-buttons .facebook-button {
+        text-align: left;
+    }
+
+        .external-socialmedia-buttons .facebook-button button{
+            background-image: url(../images/buttons/facebook-login-button.svg);
+            background-repeat: no-repeat;
+            border: none;
+            height: 42px;
+            width: 235px;
+        }
+            .external-socialmedia-buttons .facebook-button button:hover {
+                filter: brightness(90%);
+            }
+
+    .external-socialmedia-buttons .google-button {
+        text-align: right;
+    }
+
+        .external-socialmedia-buttons .google-button button {
+            background-image: url(../images/buttons/google-login-button.svg);
+            background-repeat: no-repeat;
+            border: none;
+            height: 42px;
+            width: 235px;
+        }
+            .external-socialmedia-buttons .google-button button:hover {
+                filter: brightness(90%);
+            }
 
 
 /*------------------------------MEDIA----------------------------------------*/
