--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto:wght@400;500;700&display=swap');
 
+
+
+/*-------------------------The colours, fonts, font sizes and borders for the website-----------------*/
+
+
 :root {
     --color-theme: #20D3C2;
     --color-theme-light: #EDFCFA;
@@ -34,7 +39,10 @@
 }
 
 
-/*-------------------------------GENERAL-------------------------------------*/
+
+
+
+/*-------------------------------The general styles for the website----------------------------------*/
 
 
 html, body {
@@ -201,7 +209,7 @@ margin: 0.4rem 0;
 
 
 
-/*-------------------------------TOP-MENU------------------------------------*/
+/*---------------------------THE TOP MENU-----------------------------*/
 
 
 .top-menu {
@@ -286,8 +294,10 @@ margin: 0.4rem 0;
 
 
 
-/*-------------------------------MAIN-MENU-----------------------------------*/
 
+
+
+/*--------------------------------THE MAIN MENU------------------------------------*/
 
 
 .main-menu {
@@ -457,9 +467,10 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------------------SHOWCASE-----------------------------------*/
 
 
+
+/*--------------------------THE SHOWCASE--------------------------*/
 
 .showcase {
     background-color: var(--color-gray-3);
@@ -490,9 +501,9 @@ margin: 0.4rem 0;
 
 
 
-/*----------------------------------WEBSHOP-INFO-----------------------------*/
 
 
+/*---------------------------THE WEBSHOP INFO--------------------------*/
 
 .webshop-info {
     padding: 4rem 0;
@@ -540,78 +551,86 @@ margin: 0.4rem 0;
 
 
 
-/*----------------------------SHOP-BY-CATEGORY-------------------------------*/
 
 
-    .shop-by-category .grid {
-        display: grid;
-        gap: 0.8rem;
-        grid-template-columns: repeat(5, minmax(100px, 249px));
-        grid-template-rows: repeat(3, minmax(100px, 249px));
+
+/*-------------------------THE SHOP BY CATEGORY---------------------------*/
+
+.shop-by-category .grid {
+    display: grid;
+    gap: 0.8rem;
+    grid-template-columns: repeat(5, minmax(100px, 249px));
+    grid-template-rows: repeat(3, minmax(100px, 249px));
+}
+
+.shop-by-category .category-box {
+    position: relative;
+    background-color: var(--color-gray-1);
+    border-radius: var(--border-radius-small);
+    overflow: hidden;
+}
+
+    .shop-by-category .category-box .category-box-title {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 50%;
+        border-radius: 0 var(--border-radius-small) 0 0;
+        background-color: var(--color-theme-dark);
+        color: var(--color-theme);
+        padding: 0.5rem 1rem;
+        font-weight: var(--font-weight-medium);
+        height: 38px;
+        transition: 0.2s ease-in-out;
     }
-
-    .shop-by-category .category-box {
-        position: relative;
-        background-color: var(--color-gray-1);
-        border-radius: var(--border-radius-small);
-        overflow: hidden;
-    }
-
-        .shop-by-category .category-box .category-box-title {
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 50%;
-            border-radius: 0 var(--border-radius-small) 0 0;
-            background-color: var(--color-theme-dark);
-            color: var(--color-theme);
-            padding: 0.5rem 1rem;
-            font-weight: var(--font-weight-medium);
-            height: 38px;
-            transition: 0.2s ease-in-out;
-        }
 
         .shop-by-category .category-box:hover .category-box-title {
             height: 75px;
         }
-            .shop-by-category .category-box .category-box-title span {
-                display: block;
-                color: var(--color-white);
-                font-size: 0.8rem;
-                margin-top: 0.5rem;
-            }
 
-    #category-box-1 {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-    #category-box-2 {
-        grid-column: 2 / 4;
-        grid-row: 1 / 2;
-    }
-    #category-box-3 {
-        grid-column: 4 / -1;
-        grid-row: 1 / 3;
-    }
-    #category-box-4 {
-        grid-column: 1 / 3;
-        grid-row: 2 / -1;
-    }
-    #category-box-5 {
-        grid-column: 3 / 4;
-        grid-row: 2 / 3;
-    }
-    #category-box-6 {
-        grid-column: 3 / 5;
-        grid-row: 3 / -1;
-    }
-    #category-box-7 {
-        grid-column: 5 / -1;
-        grid-row: 3 / -1;
-    }
+        .shop-by-category .category-box .category-box-title span {
+            display: block;
+            color: var(--color-white);
+            font-size: 0.8rem;
+            margin-top: 0.5rem;
+        }
 
 
-/*----------------------------NEW-ARRIVALS..................................*/
+
+#category-box-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+#category-box-2 {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+}
+#category-box-3 {
+    grid-column: 4 / -1;
+    grid-row: 1 / 3;
+}
+#category-box-4 {
+    grid-column: 1 / 3;
+    grid-row: 2 / -1;
+}
+#category-box-5 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+#category-box-6 {
+    grid-column: 3 / 5;
+    grid-row: 3 / -1;
+}
+#category-box-7 {
+    grid-column: 5 / -1;
+    grid-row: 3 / -1;
+}
+
+
+
+
+
+/*---------------------------THE NEW ARRIVALS------------------------------*/
 
 .new-arrivals {
     padding-top: 6rem;
@@ -722,7 +741,10 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------------SHOWCASE-2------------------------------*/
+
+
+
+/*-------------------------------THE SHOWCASE 2------------------------------*/
 
 .showcase-2 {
     background-color: var(--color-gray-1);
@@ -770,7 +792,9 @@ margin: 0.4rem 0;
  }
 
 
-/*--------------------------------FEATURED-PRODUCTS-------------------------------*/
+
+
+/*--------------------------------THE FEATURED PRODUCTS-------------------------------*/
 
 .featured-products {
     padding-top: 6rem;
@@ -880,7 +904,10 @@ margin: 0.4rem 0;
                 }
 
 
-/*------------------SHOWCASE-3-----------------------------*/
+
+
+
+/*------------------------------THE SHOWCASE 3---------------------------------*/
 
 .showcase-3 {
     background-color: var(--color-theme-dark);
@@ -947,14 +974,13 @@ margin: 0.4rem 0;
 }
   
 
-/*------------------------TOP-SELLERS----------------------------------------*/
-
+/*------------------------THE TOP SELLERS----------------------------------*/
 
 .top-sellers .grid {
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(2,minmax(300px, 400px));
-    grid-template-rows: repeat(2,minmax(200px, 320px));
+    grid-template-columns: repeat(2,minmax(250px, 500px));
+    grid-template-rows: repeat(2,minmax(250px, 300px));
     justify-content: center;
 }
 
@@ -979,6 +1005,7 @@ margin: 0.4rem 0;
         z-index: 1;
         transition: 0.3s ease-in-out;
         font-size: 1rem;
+        pointer-events: none;
     }
     .top-sellers #card-box-1 .card-body {
         height: 7.5%;
@@ -1088,8 +1115,7 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------SUBSCRIBE-NOW--------------------------------*/
-
+/*---------------------------THE SUBSCRIBE NOW--------------------------------*/
 
 .subscribe-now {
     background-color: var(--color-gray-4);
@@ -1125,10 +1151,8 @@ margin: 0.4rem 0;
 
 
 
-/*-------------------------BOTTOM-LINE-------------------------------*/
 
-
-
+/*-------------------------THE BOTTOM LINE-------------------------------*/
 
 .bottom-line {
     background-color: var(--color-theme-dark);
@@ -1145,15 +1169,7 @@ margin: 0.4rem 0;
 
 
 
-
-
-/*--------------ACCOUNT-HTML--------------------*/
-
-
-
-
-
-/*------------SITE-TITLE-----------------------*/
+/*--------------------------THE SITE TITLE--------------------------------*/
 
 
 .site-title {
@@ -1200,7 +1216,7 @@ margin: 0.4rem 0;
 
 
 
-/*----------------------------SIGNUP-SIGNIN------------------------*/
+/*----------------------------THE SIGNUP SIGNIN------------------------*/
 
 .signup-signin {
     padding: 6rem 0;
@@ -1278,10 +1294,10 @@ margin: 0.4rem 0;
             }
 
 
+
+
+
 /*------------------------------MEDIA----------------------------------------*/
-
-
-
 
 
 @media (min-width: 578px) {
